<resources>
    <string name="app_name">SPAMovil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SPA Movil</string>
    <string name="nav_header_subtitle">Super Promociones de Acayucan</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ajustes</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_checador">Checador de Precios</string>
    <string name="menu_codificador">Codificador de articulos</string>

    <string name="name_user">Alejandro Flores</string>

    <string name="fhome_title">Bienvenido a la aplicacion movil de SPA</string>
    <string name="fhome_perfil_title">Tu perfil</string>
    <string name="fhome_perfil_name">Nombre completo:</string>
    <string name="fhome_perfil_email">Correo Electronico:</string>
    <string name="fhome_perfil_address">Direccion:</string>
    <string name="fhome_perfil_sucursal">Sucursal:</string>

    <string name="fhome_avanzado_title">Avanzado</string>
    <string name="fhome_avanzado_password_title">Cambio de contraseña</string>
    <string name="fhome_avanzado_password_change_btn">Cambiar contraseña</string>
    <string name="fhome_avanzado_txt_password_old">Contraseña actual</string>
    <string name="fhome_avanzado_txt_password">Nueva contraseña</string>
    <string name="fhome_avanzado_txt_password_repeat">Repita su contraseña</string>
    <string name="fhome_avanzado_txt_sesion_title">Opciones de sesion</string>
    <string name="fhome_avanzado_txt_sesion_activa">Mantener la sesion activa</string>
    <string name="fhome_avanzado_txt_tab_main_title">Pestaña principal</string>
    <string name="fhome_avanzado_txt_tab_help">La opcion que elija es la ventana que se abrira al iniciar la aplicacion, por defecto se abre la pantalla inicio</string>

    <string name="fhome_admin_title">Administrador</string>
    <string name="fhome_admin_dl_sucursal">Sucursal</string>
    <string name="fhome_admin_dl_host">Host</string>
    <string name="fhome_admin_dl_database">Base de datos</string>
    <string name="fhome_admin_dl_btn">Editar:</string>
    <string name="fhome_admin_dl_datos_change_title">Cambiando datos locales</string>
    <string name="locales">Datos de administrador</string>

    <string name="text_empty">…</string>
    <string name="text_accept">Aceptar</string>
    <string name="text_cancel">Cancelar</string>

    <string name="splash_config">Cargando configuraciones del sistema…</string>
    <string name="splash_1">Cargando datos de sesion…</string>
    <string name="splash_2">Obteniendo credenciales de usuario…</string>
    <string name="splash_3">Comprobando permisos…</string>

    <string name="login_title">Login</string>
    <string name="login_user_label">Usuario:</string>
    <string name="login_user_hint">alguien@dominio.subdominio</string>
    <string name="login_password_label">Contraseña:</string>
    <string name="login_password_hint">contraseña</string>
    <string name="login_check_show_password">Mostrar contraseña</string>
    <string name="login_btn">Iniciar Sesion</string>
    <string name="login_forgot_password">Olvide mi contraseña</string>

    <string name="checador_precios_ayuda">Pase el escaner y espere hasta oir un beep</string>
    <string name="checador_articulo">Articulo no encontrado</string>
    <string name="checador_precio">No disponible</string>

</resources>