<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    tools:context=".views.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/alex_brush"
                    android:text="@string/login_title"
                    android:textColor="@color/white"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="0dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="15dp"
                        android:gravity="center" >
                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/cesta"
                            android:contentDescription="@string/login_title"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="35dp"
                            android:fontFamily="@font/pacifico"
                            android:text="@string/login_user_label"
                            android:textColor="@color/color_secondary"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/login_user"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_baseline_person_24"
                            android:hint="@string/login_user_hint"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:minHeight="48dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/pacifico"
                            android:text="@string/login_password_label"
                            android:textColor="@color/color_secondary"
                            android:textSize="17sp"
                            android:textStyle="bold" />
                        <EditText
                            android:id="@+id/login_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/login_password_hint"
                            android:importantForAutofill="no"
                            android:inputType="textPassword"
                            android:minHeight="48dp"
                            android:drawableStart="@drawable/ic_baseline_lock_24"/>
                        <CheckBox
                            android:id="@+id/login_view_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/login_check_show_password"/>

                        <Button
                            android:id="@+id/login_btn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="50dp"
                            android:text="@string/login_btn"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/login_recupera_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/pacifico"
                    android:text="@string/login_forgot_password"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />
                <View
                    android:layout_width="163dp"
                    android:layout_height="1dp"
                    android:background="@color/white"
                    android:layout_marginBottom="60dp"
                    app:layout_constraintTop_toBottomOf="@id/login_recupera_password"
                    app:layout_constraintLeft_toLeftOf="@id/login_recupera_password"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <View
        android:id="@+id/login_background_spinner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_spinner"
        android:clickable="true"
        android:visibility="visible"
        android:contentDescription="@string/login_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ProgressBar
        android:id="@+id/login_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>